# niflib

./: .editorconfig  CMakeLists.txt
data/: niextradata_test.nif  skyrim_ninode_test.nif  skyrim_pc.nif
docs/: Doxyfile
examples/: nif_copy.cpp  text_dump.cpp
include/: header.hpp  lib_types.hpp  nif_api.hpp  nif_enum.hpp  nif_header.hpp  nif_object.hpp  nif_object_factory.hpp  nif_utility.hpp  object_factory.hpp
include/NIF/: api.hpp  block_factory.hpp  enums.hpp  export_visibility.hpp  file.hpp  header.hpp  object_factory.hpp  utility.hpp
include/NIF/blocks/: extra_data.hpp  extradata.hpp  header.hpp  named_extra_data.hpp  niextradata.hpp
include/NIF/interfaces/: block.hpp  block_name.hpp  controllable.hpp  controllable_block.hpp  controller.hpp  controller_block.hpp  extra.hpp  extra_block.hpp  nameable.hpp  named_block.hpp  object.hpp
include/interfaces/: block_name.hpp  object.hpp
src/: export_info.cpp  header.cpp  nif_api.cpp  nif_header.cpp  nif_object_factory.cpp  nif_utility.cpp  object_factory.cpp
src/NIF/: api.cpp  block_factory.cpp  file.cpp  header.cpp  object_factory.cpp  utility.cpp
src/NIF/blocks/: extra_data.cpp  extradata.cpp  header.cpp  named_extra_data.cpp  niextradata.cpp
src/NIF/interfaces/: block.cpp  block_name.cpp  controllable.cpp  controllable_block.cpp  controller.cpp  extra.cpp  extra_block.cpp  nameable.cpp  named_block.cpp
src/interfaces/: block_name.cpp
test/: get_nif_version_test.cpp  nif_header_test.cpp
